# ble-weatherstation-proto

./: .clang-format  .gitignore  Makefile  README.rst  flake.nix  gatt_svr.c  gatt_svr.h  log.h  main.c  main.h  sensor.c  sensor.h  util.h  uuid_defs.c  uuid_defs.h
docs/: Doxyfile
docs/sphinx/: building.rst  conf.py  doxygen_index.rst  index.rst
util/: Cargo.toml
util/src/: main.rs
