[package]
name = "util"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
uuid = { version = "0.8.1", features = ["v4"] }
anyhow = "1.0.32"
